# TTT4280-Project

./: .gitignore  README.md
C/: CMakeLists.txt
C/src/: adc_sampler.c
python/: camera.py  main.py  math_import.py
python/lab3/: 24feb_data  27feb_data  27feb_r0_data  27feb_r1_data  27feb_r2_data  27feb_r3_data  27feb_r4_data  27feb_t1_data  27feb_t2_data  27feb_t3_data  27feb_t4_data  27feb_t5_data  data_data  mars3_2_t0_data  mars3_dark_t0_data  mars3_jugular2_r0_data  mars3_jugular2_r1_data  mars3_jugular2_r2_data  mars3_jugular2_r3_data  mars3_jugular2_r4_data  mars3_jugular_r0_data  mars3_jugular_r1_data  mars3_jugular_r2_data  mars3_jugular_r3_data  mars3_jugular_r4_data  simple_model.py
